any size font supported; 24px font added; imagemagick font manipulation optimized (same format); dynamic translation added;

--- a/lang/en.json
+++ b/lang/en.json
@@ -80,5 +80,7 @@
 	"REGION": "region",
 	"YES": "Yes",
 	"NO": "No",
-	"RANDOM_THEME": "Random theme"
+	"RANDOM_THEME": "Random theme",
+	" +":"✔",
+	" -":"✘"
 }
