--- a/lang/en.json
+++ b/lang/en.json
@@ -1,86 +1,94 @@
 {
-	"LANG_NAME": "English",
-	"BACKING_UP": "Backing up %ls...\n",
-	"DELETING": "Deleting %ls...\n",
-	"DOWNGRADE": "Downgrade %ls",
-	"DOWNGRADING": "Downgrading %ls...\n",
-	"DOWNGRADING_NOT_NEEDED": "Downgrading %ls not needed.\n",
-	"DUMP": "Dump %ls",
-	"DUMPING": "Dumping %ls to\n%ls...\n",
-	"INJECT": "Inject %ls",
-	"INJECTING": "Injecting\n%ls\nto %ls...\n",
-	"DECRYPT": "Decrypt %ls",
-	"DECRYPTING": "Decrypting %ls...\n",
-	"DECRYPTED": "Decrypted %d %ls\n", 
-	"GENERATE": "Generate %ls",
-	"GENERATING": "Generating %ls...\n",
-	"PROCESSING": "Processing %ls...\n",
-	"OPENING": "Opening %ls...\n",
-	"RESTORE": "Restore %ls",
-	"RESTORING": "Restoring %ls...\n",
-	"LOAD": "Load %ls",
-	"DIRECTORY": "Directory: %ls",
-	"MISSING": "Missing %ls!\n",
-	"ERROR_OPENING": "Error opening %ls!\n",
-	"ERROR_CREATING": "Error creating %ls!\n",
-	"ERROR_READING": "Error reading %ls!\n",
-	"ERROR_WRITING": "Error writing %ls!\n",
-	"ERROR_COPYING": "Error copying %ls to %ls!\n",
-	"WRONG": "Wrong %ls %ls!\n",
-	"GOT": "Got %ls\n",
-	"EXPECTED": "Expected %ls\n",
-	"VERSION": "version",
-	"VERSION_OF": "Version of %ls: %u\n",
-	"ENTRIES_COUNT": "entries count",
-	"SIZE": "size",
-	"CONTENT": "content",
-	"CRYPTO_TYPE": "CryptoType: %ls\n",
-	"CHOOSE": "Choose %ls:\n",
-	"NAND_PARTITIONS": "NAND partitions",
-	"TITLE_KEYS": "title keys",
-	"TITLE_KEYS_FILE": "title keys file",
-	"FILES": "files",
-	"PAD": "pad",
-	"DOWNGRADE_PACK": "downgrade pack",
-	"TMD_VERSION": "TMD version",
-	"TMD_SIZE": "TMD size",
-	"HASH": "hash",
-	"FIRMWARE_FILE": "firmware file",
-	"HEALTH_AND_SAFETY": "Health & Safety info",
-	"CHECK_TMD_ONLY": "check TMD only",
-	"INJECT_FBI": "inject FBI",
-	"SOURCE_ACTION": "source action",
-	"SYSTEM_TITLES": "system titles",
-	"SYSTEM_TITLES_WARNING": "This should take long, the\nentire CTRNAND will be scanned.\nBe patient and wait until\nthe research is finished.\n",
-	"SYSTEM_TITLES_DECRYPT": "The entire CTRNAND has been\nscanned and %d CTR titles have\nbeen dumped.\nDo you want to decrypt them\nall?\n",
-	"KEYS_MISMATCH": "encrypted keys binary size mismatch. Retry later?\nkeys count: %04X\n length: E@%08X, A@%08X\n",
-	"NO_EMUNAND": "No emuNAND mounted!\n",
-	"KEY7": "key 7.x",
-	"SECURE": "secure",
-	"NONE": "none",
-	"PRESS_BUTTON_ACTION": "Press %ls to %ls\n",
-	"HOLD_BUTTON_ACTION": "Hold %ls to %ls\n",
-	"CANCEL": "cancel",
-	"CONTINUE": "continue",
-	"KEEP": "keep",
-	"DELETE": "delete",
-	"OPEN_MENU": "open the menu",
-	"FAILED": "Failed!\n",
-	"COMPLETED": "Completed!\n",
-	"SETTINGS": "Settings",
-	"FORCE_UI_BOOT": "Force UI boot          %ls",
-	"SELECTED_THEME": "Selected theme      <%3c  >",
-	"SHOW_AGB": "Show AGB_FIRM BIOS     %ls",
-	"ENABLE_3D_UI": "Enable 3D UI           %ls",
-	"QUICK_BOOT": "Quick boot             %ls",
-	"ABSYSN": "Autoboot into sysNAND  %ls",
-	"AUTOBOOT": "Autoboot",
-	"WARNING": "Warning",
-	"REGION_": "Region: %ls\n",
-	"REGION": "region",
-	"YES": "Yes",
-	"NO": "No",
-	"RANDOM_THEME": "Random theme",
-	" +":"✔",
-	" -":"✘"
+"en":"English",
+"BACKING_UP":"Backing up %ls...\n",
+"DELETING":"Deleting %ls...\n",
+"DOWNGRADE":"Downgrade %ls",
+"DOWNGRADING":"Downgrading %ls...\n",
+"DOWNGRADING_NOT_NEEDED":"Downgrading %ls not needed.\n",
+"DUMP":"Dump %ls",
+"DUMPING":"Dumping %ls to\n%ls...\n",
+"INJECT":"Inject %ls",
+"INJECTING":"Injecting\n%ls\nto %ls...\n",
+"DECRYPT":"Decrypt %ls",
+"DECRYPTING":"Decrypting %ls...\n",
+"DECRYPTED":"Decrypted %d %ls\n", 
+"GENERATE":"Generate %ls",
+"GENERATING":"Generating %ls...\n",
+"PROCESSING":"Processing %ls...\n",
+"OPENING":"Opening %ls...\n",
+"RESTORE":"Restore %ls",
+"RESTORING":"Restoring %ls...\n",
+"LOAD":"Load %ls",
+"DIRECTORY":"Directory: %ls",
+"MISSING":"Missing %ls!\n",
+"ERROR_OPENING":"Error opening %ls!\n",
+"ERROR_CREATING":"Error creating %ls!\n",
+"ERROR_READING":"Error reading %ls!\n",
+"ERROR_WRITING":"Error writing %ls!\n",
+"ERROR_COPYING":"Error copying %ls to %ls!\n",
+"WRONG":"Wrong %ls %ls!\n",
+"GOT":"Got %ls\n",
+"EXPECTED":"Expected %ls\n",
+"VERSION":"version",
+"VERSION_OF":"Version of %ls: %u\n",
+"ENTRIES_COUNT":"entries count",
+"SIZE":"size",
+"CONTENT":"content",
+"CRYPTO_TYPE":"CryptoType: %ls\n",
+"CHOOSE":"Choose %ls:\n",
+"NAND_PARTITIONS":"NAND partitions",
+"TITLE_KEYS":"title keys",
+"TITLE_KEYS_FILE":"title keys file",
+"FILES":"files",
+"PAD":"pad",
+"DOWNGRADE_PACK":"downgrade pack",
+"TMD_VERSION":"TMD version",
+"TMD_SIZE":"TMD size",
+"HASH":"hash",
+"FIRMWARE_FILE":"firmware file",
+"HEALTH_AND_SAFETY":"Health & Safety info",
+"CHECK_TMD_ONLY":"check TMD only",
+"INJECT_FBI":"inject FBI",
+"SOURCE_ACTION":"source action",
+"SYSTEM_TITLES":"system titles",
+"SYSTEM_TITLES_WARNING":"This should take long, the\nentire CTRNAND will be scanned.\nBe patient and wait until\nthe research is finished.\n",
+"SYSTEM_TITLES_DECRYPT":"The entire CTRNAND has been\nscanned and %d CTR titles have\nbeen dumped.\nDo you want to decrypt them\nall?\n",
+"KEYS_MISMATCH":"encrypted keys binary size mismatch. Retry later?\nkeys count: %04X\n length: E@%08X, A@%08X\n",
+"NO_EMUNAND":"No emuNAND mounted!\n",
+"KEY7":"key 7.x",
+"SECURE":"secure",
+"NONE":"none",
+"PRESS_BUTTON_ACTION":"Press %ls to %ls\n",
+"HOLD_BUTTON_ACTION":"Hold %ls to %ls\n",
+"CANCEL":"cancel",
+"CONTINUE":"continue",
+"KEEP":"keep",
+"DELETE":"delete",
+"OPEN_MENU":"open the menu",
+"FAILED":"Failed!\n",
+"COMPLETED":"Completed!\n",
+"SETTINGS":"Settings",
+"FORCE_UI_BOOT":"Force UI boot          %ls",
+"SELECTED_THEME":"Selected theme      <%3c  >",
+"SHOW_AGB":"Show AGB_FIRM BIOS     %ls",
+"ENABLE_3D_UI":"Enable 3D UI           %ls",
+"QUICK_BOOT":"Quick boot             %ls",
+"ABSYSN":"Autoboot into sysNAND  %ls",
+"AUTOBOOT":"Autoboot",
+"WARNING":"Warning",
+"REGION_":"Region: %ls\n",
+"REGION":"region",
+"YES":"Yes",
+"NO":"No",
+"RANDOM_THEME":"Random theme",
+"[A]":"",
+"[B]":"",
+"[X]":"",
+"[Y]":"",
+"[L]":"",
+"[R]":"",
+"[RIGHT]":"",
+"[LEFT]":"",
+"[UP]":"",
+"[DOWN]":""
 }
