--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,91 +1,93 @@
 {
-	"LANG_NAME": "Русский",
-	"BACKING_UP": "Резервное копирование %ls...\n",
-	"DELETING": "Удаление %ls...\n",
-	"DOWNGRADE": "Откат версии %ls",
-	"DOWNGRADING": "Откатывается версия %ls...\n",
-	"DOWNGRADING_NOT_NEEDED": "Откат версии %ls не требуется.\n",
-	"DUMP": "Извлечение %ls",
-	"DUMPING": "Извлекается %ls в\n%ls...\n",
-	"INJECT": "Замена %ls",
-	"INJECTING": "Заменяется из\n%ls\nв %ls...\n",
-	"DECRYPT": "Расшифровывание %ls",
-	"DECRYPTING": "Расшифровывание %ls...\n",
-	"DECRYPTED": "Расшифровано %d %ls\n", 
-	"GENERATE": "Создать %ls",
-	"GENERATING": "Создается %ls...\n",
-	"PROCESSING": "Обрабатывается %ls...\n",
-	"OPENING": "Открывается %ls...\n",
-	"RESTORE": "Восстановить %ls",
-	"RESTORING": "Восстанавливается %ls...\n",
-	"LOAD": "Загрузка %ls",
-	"DIRECTORY": "Папка: %ls",
-	"MISSING": "Отсутствует %ls!\n",
-	"ERROR_OPENING": "Ошибка открытия %ls!\n",
-	"ERROR_CREATING": "Ошибка создания %ls!\n",
-	"ERROR_READING": "Ошибка чтения %ls!\n",
-	"ERROR_WRITING": "Ошибка записи %ls!\n",
-	"ERROR_COPYING": "Ошибка копирования %ls в %ls!\n",
-	"WRONG": "Неверный %ls %ls!\n",
-	"GOT": "Получено %ls\n",
-	"EXPECTED": "Требуется %ls\n",
-	"VERSION": "версия",
-	"VERSION_OF": "Версия %ls: %u\n",
-	"ENTRIES_COUNT": "количество записей",
-	"SIZE": "размер",
-	"CONTENT": "содержимое",
-	"CRYPTO_TYPE": "Тип шифрования: %ls\n",
-	"CHOOSE": "Выберите %ls:\n",
-	"NAND_PARTITIONS": "NAND разделов",
-	"TITLE_KEYS": "ключи приложений",
-	"TITLE_KEYS_FILE": "файл ключей приложений",
-	"FILES": "файлы",
-	"PAD": "пад",
-	"DOWNGRADE_PACK": "файл для отката версии",
-	"TMD_VERSION": "версия TMD",
-	"TMD_SIZE": "размер TMD",
-	"HASH": "хеш",
-	"FIRMWARE_FILE": "файл прошивки",
-	"HEALTH_AND_SAFETY": "Информация о здоровье и безопасности",
-	"CHECK_TMD_ONLY": "проверить только TMD",
-	"INJECT_FBI": "заменить на FBI",
-	"SOURCE_ACTION": "действие с источником",
-	"SYSTEM_TITLES": "системные приложения",
-	"SYSTEM_TITLES_WARNING": "Это займет некоторое время,\nвесь CTRNAND будет просканирован.\nДождитесь\nокончания исследования.\n",
-	"SYSTEM_TITLES_DECRYPT": "Весь CTRNAND просканирован\nи %d CTR приложений извлечено\nВы хотите расшифровать их?\n",
-	"KEYS_MISMATCH": "неверный размер ключа. Попробовать позже?\nключей: %04X\n размер: E@%08X, A@%08X\n",
-	"NO_EMUNAND": "emuNAND не установлен!\n",
-	"KEY7": "ключ шифрования 7.x",
-	"SECURE": "зашифровано",
-	"NONE": "без шифрования",
-	"PRESS_BUTTON_ACTION": "Нажмите %ls, чтобы %ls\n",
-	"HOLD_BUTTON_ACTION": "Нажмите %ls, чтобы %ls\n",
-	"CANCEL": "отменить",
-	"CONTINUE": "продолжить",
-	"KEEP": "оставить",
-	"DELETE": "удалить",
-	"OPEN_MENU": "открыть меню",
-	"FAILED": "Ошибка!\n",
-	"COMPLETED": "Завершено!\n",
-	"SETTINGS": "Настройки", 
-	"FORCE_UI_BOOT": "Загружать меню         %ls",
-	"SELECTED_THEME": "Выбранная тема      <%3c  >",
-	"SHOW_AGB": "Показывать AGB_FIRM    %ls",
-	"ENABLE_3D_UI": "Включить 3D в меню     %ls",
-	"QUICK_BOOT": "Быстрая загрузка       %ls",
-	"MENU_LANGUAGE": "Язык      %16ls",
-	"ABSYSN": "Автозагрузка в sysNAND %ls",
-	"AUTOBOOT": "Автозагрузка",
-	"WARNING": "Внимание",
-	"REGION_": "Регион: %ls\n",
-	"REGION": "регион",
-	"YES": "Да",
-	"NO": "Нет",
-	"RANDOM_THEME": "Случайная тема",
+"ru":"Русский",
+"BACKING_UP":"Резервное копирование %ls...\n",
+"DELETING":"Удаление %ls...\n",
+"DOWNGRADE":"Откат версии %ls",
+"DOWNGRADING":"Откатывается версия %ls...\n",
+"DOWNGRADING_NOT_NEEDED":"Откат версии %ls не требуется.\n",
+"DUMP":"Извлечение %ls",
+"DUMPING":"Извлекается %ls в\n%ls...\n",
+"INJECT":"Замена %ls",
+"INJECTING":"Заменяется из\n%ls\nв %ls...\n",
+"DECRYPT":"Расшифровывание %ls",
+"DECRYPTING":"Расшифровывание %ls...\n",
+"DECRYPTED":"Расшифровано %d %ls\n", 
+"GENERATE":"Создать %ls",
+"GENERATING":"Создается %ls...\n",
+"PROCESSING":"Обрабатывается %ls...\n",
+"OPENING":"Открывается %ls...\n",
+"RESTORE":"Восстановить %ls",
+"RESTORING":"Восстанавливается %ls...\n",
+"LOAD":"Загрузка %ls",
+"DIRECTORY":"Папка: %ls",
+"MISSING":"Отсутствует %ls!\n",
+"ERROR_OPENING":"Ошибка открытия %ls!\n",
+"ERROR_CREATING":"Ошибка создания %ls!\n",
+"ERROR_READING":"Ошибка чтения %ls!\n",
+"ERROR_WRITING":"Ошибка записи %ls!\n",
+"ERROR_COPYING":"Ошибка копирования %ls в %ls!\n",
+"WRONG":"Неверный %ls %ls!\n",
+"GOT":"Получено %ls\n",
+"EXPECTED":"Требуется %ls\n",
+"VERSION":"версия",
+"VERSION_OF":"Версия %ls: %u\n",
+"ENTRIES_COUNT":"количество записей",
+"SIZE":"размер",
+"CONTENT":"содержимое",
+"CRYPTO_TYPE":"Тип шифрования: %ls\n",
+"CHOOSE":"Выберите %ls:\n",
+"NAND_PARTITIONS":"NAND разделов",
+"TITLE_KEYS":"ключи приложений",
+"TITLE_KEYS_FILE":"файл ключей приложений",
+"FILES":"файлы",
+"PAD":"пад",
+"DOWNGRADE_PACK":"файл для отката версии",
+"TMD_VERSION":"версия TMD",
+"TMD_SIZE":"размер TMD",
+"HASH":"хеш",
+"FIRMWARE_FILE":"файл прошивки",
+"HEALTH_AND_SAFETY":"Информация о здоровье и безопасности",
+"CHECK_TMD_ONLY":"проверить только TMD",
+"INJECT_FBI":"заменить на FBI",
+"SOURCE_ACTION":"действие с источником",
+"SYSTEM_TITLES":"системные приложения",
+"SYSTEM_TITLES_WARNING":"Это займет некоторое время,\nвесь CTRNAND будет просканирован.\nДождитесь\nокончания исследования.\n",
+"SYSTEM_TITLES_DECRYPT":"Весь CTRNAND просканирован\nи %d CTR приложений извлечено\nВы хотите расшифровать их?\n",
+"KEYS_MISMATCH":"неверный размер ключа. Попробовать позже?\nключей: %04X\n размер: E@%08X, A@%08X\n",
+"NO_EMUNAND":"emuNAND не установлен!\n",
+"KEY7":"ключ шифрования 7.x",
+"SECURE":"зашифровано",
+"NONE":"без шифрования",
+"PRESS_BUTTON_ACTION":"Нажмите %ls, чтобы %ls\n",
+"HOLD_BUTTON_ACTION":"Нажмите %ls, чтобы %ls\n",
+"CANCEL":"отменить",
+"CONTINUE":"продолжить",
+"KEEP":"оставить",
+"DELETE":"удалить",
+"OPEN_MENU":"открыть меню",
+"FAILED":"Ошибка!\n",
+"COMPLETED":"Завершено!\n",
+"SETTINGS":"Настройки", 
+"FORCE_UI_BOOT":"Загружать меню         %ls",
+"SELECTED_THEME":"Выбранная тема      <%3c  >",
+"SHOW_AGB":"Показывать AGB_FIRM    %ls",
+"ENABLE_3D_UI":"Включить 3D в меню     %ls",
+"QUICK_BOOT":"Быстрая загрузка       %ls",
+"MENU_LANGUAGE":"Язык      %16ls",
+"ABSYSN":"Автозагрузка в sysNAND %ls",
+"AUTOBOOT":"Автозагрузка",
+"WARNING":"Внимание",
+"REGION_":"Регион: %ls\n",
+"REGION":"регион",
+"YES":"Да",
+"NO":"Нет",
+"RANDOM_THEME":"Случайная тема",
 "Enabled":"Включено",
 "Disabled":"Выключено",
 "Japan":"Япония",
 "North America":"Северная Америка",
+"Europe":"Европа",
+"Australia":"Австралия",
 "Europe/Australia":"Европа/Австралия",
 "China":"Китай",
 "South Korea":"Южная Корея",
