--- a/lang/es.json
+++ b/lang/es.json
@@ -1,5 +1,46 @@
 {
 "es":"Español",
+"[A]":"",
+"[B]":"",
+"[X]":"",
+"[Y]":"",
+"[L]":"",
+"[R]":"",
+"[RIGHT]":"",
+"[LEFT]":"",
+"[UP]":"",
+"[DOWN]":"",
+"Enabled":"Habilitado",
+"Disabled":"Deshabilitado",
+"Japan":"Japón",
+"North America":"Norte América",
+"Europe":"Europa",
+"Australia":"Australia",
+"Europe/Australia":"Europa/Australia",
+"China":"China",
+"South Korea":"Corea del Sur",
+"Taiwan":"Таiwan",
+"Unknown":"Desconocido",
+"Failed to %ls %ls!":"No se pudo %ls %ls!",
+"mount":"montar",
+"load":"cargar",
+"file system":"sistema de archivos",
+"Press %ls to %ls.":"Presione %ls, para %ls.",
+"any button":"cualquier botón",
+"continue":"continuar",
+"reboot":"reiniciar",
+"cancel":"cancelar",
+"Reboot":"Reiniciar",
+"Shutdown":"Apagar",
+"Generating %ls XORpad":"Generando %ls XORpad",
+"Dumping %ls":"Extrayendo %ls",
+"Injecting %ls":"Inyectando %ls",
+"Dumping %ls %ls partition":"Extraer %ls %ls particione",
+"Injecting %ls %ls partition":"Extrayendo %ls %ls particione",
+
+"Settings":"Ajustes",
+
+"obsolete values below":"will be removed",
 "BACKING_UP":"Respaldando %ls...\n",
 "DELETING":"Eliminando %ls...\n",
 "DOWNGRADE":"Downgrade de %ls",
