--- a/lang/nl.json
+++ b/lang/nl.json
@@ -1,5 +1,17 @@
 {
 "nl":"Dutch",
+"[A]":"",
+"[B]":"",
+"[X]":"",
+"[Y]":"",
+"[L]":"",
+"[R]":"",
+"[RIGHT]":"",
+"[LEFT]":"",
+"[UP]":"",
+"[DOWN]":"",
+
+"obsolete values below":"will be removed",
 "SETTINGS":"Instellingen",
 "FORCE_UI_BOOT":"Start in UI            %ls",
 "SELECTED_THEME":"Selecteer thema     <%3c  >",
