--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,5 +1,60 @@
 {
 "ru":"Русский",
+"[A]":"",
+"[B]":"",
+"[X]":"",
+"[Y]":"",
+"[L]":"",
+"[R]":"",
+"[RIGHT]":"",
+"[LEFT]":"",
+"[UP]":"",
+"[DOWN]":"",
+"Enabled":"Включено",
+"Disabled":"Выключено",
+"Japan":"Япония",
+"North America":"Северная Америка",
+"Europe":"Европа",
+"Australia":"Австралия",
+"Europe/Australia":"Европа/Австралия",
+"China":"Китай",
+"South Korea":"Южная Корея",
+"Taiwan":"Тайвань",
+"Unknown":"Неизвестно",
+"Failed to %ls %ls!":"Не удалось %ls %ls!",
+"mount":"смонтировать",
+"load":"загрузить",
+"file system":"файловую систему",
+"Press %ls to %ls.":"Нажмите %ls, чтобы %ls.",
+"any button":"любую кнопку",
+"continue":"продолжить",
+"reboot":"перезагрузить",
+"cancel":"отменить",
+"This file with a valid key must exist in the SD card root in order to boot rxMode on New 3DS.":"Этот файл с верным ключом должен быть в корне SD-карты для загрузки rxMode на New 3DS.",
+"This file with a valid key must exist in the SD card root in order to decrypt newer titles on firmware version below 7.0.0 and to use newer gamecard saves on firmware below 6.0.0.":"Этот файл с верным ключом должен быть в корне SD-карты для дешифрования новых тайтлов на прошивке старше 7.0.0 и использования сохранений новых картриджей на прошивке старше 6.0.0",
+"Generating %ls XORpad":"Создаётся %ls XORpad",
+"Dumping %ls":"Извлекается %ls",
+"Injecting %ls":"Заменяется %ls",
+"Copying %ls to %ls":"Копируется %ls в %ls",
+"Dumping %ls %ls partition":"Извлекается раздел %ls %ls",
+"Injecting %ls %ls partition":"Заменяется раздел %ls %ls",
+"Copying %ls partition from %ls to %ls":"Копируется раздел %ls из %ls в %ls",
+
+"Boot":"Загрузить",
+"Reboot":"Перезагрузить",
+"Shutdown":"Выключить",
+"Decrypt":"Расшифровать",
+"Generate XORpads":"Создать XORpad'ы",
+"Dump":"Извлечь",
+"Image":"Образ",
+"Files":"Файлы",
+"Partitions":"Разделы",
+"Inject":"Заменить",
+"Copy":"Скопировать",
+"Settings":"Настройки",
+"Diagnostics":"Диагностика",
+
+"obsolete values below":"will be removed",
 "BACKING_UP":"Резервное копирование %ls...\n",
 "DELETING":"Удаление %ls...\n",
 "DOWNGRADE":"Откат версии %ls",
@@ -81,28 +136,5 @@
 "REGION":"регион",
 "YES":"Да",
 "NO":"Нет",
-"RANDOM_THEME":"Случайная тема",
-"Enabled":"Включено",
-"Disabled":"Выключено",
-"Japan":"Япония",
-"North America":"Северная Америка",
-"Europe":"Европа",
-"Australia":"Австралия",
-"Europe/Australia":"Европа/Австралия",
-"China":"Китай",
-"South Korea":"Южная Корея",
-"Taiwan":"Тайвань",
-"Unknown":"Неизвестно",
-"Failed to %ls %ls!":"Не удалось %ls %ls!",
-"mount":"смонтировать",
-"load":"загрузить",
-"file system":"файловую систему",
-"Press %ls to %ls.":"Нажмите %ls, чтобы %ls.",
-"any key":"любую клавишу",
-"continue":"продолжить",
-"reboot":"перезагрузить",
-"This file with a valid key must exist in the SD card root in order to boot rxMode on New 3DS.":"Этот файл с верным ключом должен быть в корне SD-карты для загрузки rxMode на New 3DS.",
-"This file with a valid key must exist in the SD card root in order to decrypt newer titles on firmware version below 7.0.0 and to use newer gamecard saves on firmware below 6.0.0.":"Этот файл с верным ключом должен быть в корне SD-карты для дешифрования новых тайтлов на прошивке старше 7.0.0 и использования сохранений новых картриджей на прошивке старше 6.0.0",
-"Reboot":"Перезагрузить",
-"Shutdown":"Выключить"
+"RANDOM_THEME":"Случайная тема"
 }
