--- a/lang/es.json
+++ b/lang/es.json
@@ -15,11 +15,8 @@
 "Japan":"Japón",
 "North America":"Norte América",
 "Europe":"Europa",
-"Australia":"Australia",
 "Europe/Australia":"Europa/Australia",
-"China":"China",
 "South Korea":"Corea del Sur",
-"Taiwan":"Таiwan",
 "Unknown":"Desconocido",
 "Failed to %ls %ls!":"No se pudo %ls %ls!",
 "mount":"montar",
@@ -30,15 +27,17 @@
 "continue":"continuar",
 "reboot":"reiniciar",
 "cancel":"cancelar",
+"Completed!":"¡Terminado!",
+"Canceled!":"¡Cancelado!",
 "This file with a valid key must exist in the SD card root in order to boot rxMode on New 3DS.":"Para poder entrar en modo RX en N3DS este archivo debe existir en la tarjeta SD.",
 "This file with a valid key must exist in the SD card root in order to decrypt newer titles on firmware version below 7.0.0 and to use newer gamecard saves on firmware below 6.0.0.":"Para poder decriptar nuevos titulos en versiones anteriores a 7.0.0 y poder usar saves nuevos en versiones anteriores a 6.0.0 este archivo debe existir en la raíz de la tarjeta SD .",
 "Generating %ls XORpad":"Generando %ls XORpad",
 "Dumping %ls":"Extrayendo %ls",
 "Injecting %ls":"Inyectando %ls",
-"Copying %ls to %ls":"copiando %ls a %ls",
+"Copying %ls to %ls":"Copiando %ls a %ls",
 "Dumping %ls %ls partition":" Extrayendo %ls %ls partición",
-"Injecting %ls %ls partition":"Inyectando %ls %ls" partición",
-"Copying %ls partition from %ls to %ls":"Copiando %ls Partición de %ls a %ls",
+"Injecting %ls %ls partition":"Inyectando %ls %ls partición",
+"Copying %ls partition from %ls to %ls":"Copiando %ls partición de %ls a %ls",
 
 "Boot":"Iniciar",
 "Reboot":"Reiniciar",
