Build version display added SysNAND write protect settings option RSA engine WIP Russian translation updated NAND size detect fix

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -43,18 +43,132 @@
 "Copying %ls partition from %ls to %ls":"Копируется раздел %ls из %ls в %ls",
 
 "Boot":"Загрузить",
+"Boot options.":"Варианты загрузки.",
+"Apply patches and reboot the console into rxMode on EmuNAND, if present.":"Загрузить rxMode со всеми патчами в EmuNAND, если есть.",
+"Apply patches and reboot the console into rxMode on SysNAND.":"Загрузить rxMode со всеми патчами в SysNAND.",
+"Patches signature checks and load in SysNAND with GBA and DSi support.":"Загрузить SysNAND с отключенной проверкой подписи и поддержкой GBA и DSi.",
 "Reboot":"Перезагрузить",
+"Reboot the console.":"Перезагрузить консоль.",
 "Shutdown":"Выключить",
+"Turn off the console.":"Выключить консоль.",
 "Decrypt":"Расшифровать",
+"Decryption options.":"Утилиты для дешифрования.",
 "Generate XORpads":"Создать XORpad'ы",
+"Generate XORpads for titles and NAND partitions.":"Создать XORpad'ы для приложений и разделов NAND.",
+"Generate XORpads needed to decrypt and encrypt 3DS titles from SDinfo.bin.":"Создать XORpad'ы для дешифрования и шифрования приложений из SDinfo.bin.",
+"Generate XORpads needed to decrypt and encrypt 3DS titles from ncchinfo.bin.":"Создать XORpad'ы для дешифрования и шифрования приложений из ncchinfo.bin.",
+"Generate XORpad of the TWL (DSi) partition.":"Создать XORpad раздела TWL (DSi).",
+"Generate XORpad of the TWL (DSi) FAT16 partition (TWL logical partition 0).":"Создать XORpad раздела TWL (DSi) FAT16 (логический раздел TWL 0).",
+"Generate XORpad of the TWL (DSi) FAT12 photo partition (TWL logical partition 1).":"Создать XORpad раздела фото TWL (DSi) FAT12 (логический раздел TWL 1).",
+"Generate XORpad of the AGB (GBA) savegame partition.":"Создать XORpad раздела сохранений AGB (GBA).",
+"Generate XORpad of the first firmware partition.":"Создать XORpad первого раздела firmware.",
+"Generate XORpad of the second firmware partition.":"Создать XORpad второго раздела firmware.",
+"Generate XORpad of the CTR partition.":"Создать XORpad раздела CTR.",
+"Generate XORpad of the CTR (3DS) FAT 16 partition (CTR logical partition 0).":"Создать XORpad раздела CTR (3DS) FAT 16 (логический раздел CTR 0).",
 "Dump":"Извлечь",
+"Dumping options.":"Утилиты для извлечения.",
+"Dump NAND image, separate partitions or files from the SysNAND.":"Извлечь образ NAND, отдельные разделы или файлы из SysNAND.",
+"Dump NAND image, separate partitions or files from the first EmuNAND.":"Извлечь образ NAND, отдельные разделы или файлы из первого EmuNAND.",
+"Dump NAND image, separate partitions or files from the second EmuNAND.":"Извлечь образ NAND, отдельные разделы или файлы из второго EmuNAND.",
+"Dump NAND image, separate partitions or files from the third EmuNAND.":"Извлечь образ NAND, отдельные разделы или файлы из третьего EmuNAND.",
 "Image":"Образ",
-"Files":"Файлы",
+"Backup NAND raw image to file.":"Извлечь образ NAND в файл.",
 "Partitions":"Разделы",
+"Dump decrypted NAND partitions to file.":"Извлечь расшифрованные разделы NAND в файл.",
+"Dump decrypted TWL (DSi) partition to file.":"Извлечь расшифрованный раздел TWL (DSi) в файл.",
+"Dump decrypted TWL (DSi) FAT16 partition (TWL logical partition 0) to file.":"Извлечь расшифрованный раздел TWL (DSi) FAT16 (логический раздел TWL 0) в файл.",
+"Dump decrypted TWL (DSi) FAT12 photo partition (TWL logical partition 1) to file.":"Извлечь расшифрованный раздел фото TWL (DSi) FAT12 (логический раздел TWL 1) в файл",
+"Dump decrypted AGB (GBA) savegame partition to file.":"Извлечь расшифрованный раздел сохранений AGB (GBA) в файл.",
+"Dump decrypted first firmware partition to file.":"Извлечь расшифрованный первый раздел firmware в файл.",
+"Dump decrypted second firmware partition to file.":"Извлечь расшифрованный второй раздел firmware в файл.",
+"Dump decrypted CTR partition to file.":"Извлечь расшифрованный раздел CTR в файл.",
+"Dump decrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) to file.":"Извлечь расшифрованный раздел CTR (3DS) FAT 16 (логический раздел CTR 0) в файл.",
+"Files":"Файлы",
+"Dump files from the CTRNAND FAT16 partition.":"Извлечь файлы из раздела CTRNAND FAT16.",
 "Inject":"Заменить",
+"Injection options.":"Утилиты для замены.",
+"Inject NAND image, separate partitions or files to the SysNAND.":"Заменить образ NAND, отдельные разделы или файлы в SysNAND.",
+"Inject NAND image, separate partitions or files to the first EmuNAND.":"Заменить образ NAND, отдельные разделы или файлы в первом EmuNAND.",
+"Inject NAND image, separate partitions or files to the second EmuNAND.":"Заменить образ NAND, отдельные разделы или файлы во втором EmuNAND.",
+"Inject NAND image, separate partitions or files to the third EmuNAND.":"Заменить образ NAND, отдельные разделы или файлы в третьем EmuNAND.",
+"Restore NAND from raw image file.":"Заменить образ NAND из файла.",
+"Inject unencrypted NAND partitions from file.":"Заменить не зашифрованные разделы NAND из файла.",
+"Inject unencrypted TWL (DSi) partition from file.":"Заменить не зашифрованный раздел TWL (DSi) из файла.",
+"Inject unencrypted TWL (DSi) FAT16 partition (TWL logical partition 0) from file.":"Заменить не зашифрованный раздел TWL (DSi) FAT16 (логический раздел TWL 0) из файла.",
+"Inject unencrypted TWL (DSi) FAT12 photo partition (TWL logical partition 1) from file.":"Заменить не зашифрованный раздел фото TWL (DSi) FAT12 (логический раздел TWL 1) из файла.",
+"Inject unencrypted AGB (GBA) savegame partition from file.":"Заменить не зашифрованный раздел сохранений AGB (GBA) из файла.",
+"Inject unencrypted first firmware partition from file.":"Заменить не зашифрованный первый раздел firmware из файла.",
+"Inject unencrypted second firmware partition from file.":"Заменить не зашифрованный второй раздел firmware из файла.",
+"Inject unencrypted CTR partition from file.":"Заменить не зашифрованный раздел CTR из файла.",
+"Inject unencrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) from file.":"Заменить не зашифрованный раздел CTR (3DS) FAT 16 (логический раздел CTR 0) из файла.",
+"Inject files to the CTRNAND FAT16 partition.":"Заменить файлы на разделе CTRNAND FAT16.",
 "Copy":"Скопировать",
+"Copy options.":"Утилиты для копирования.",
+"SysNAND to EmuNAND":"Из SysNAND в EmuNAND",
+"SysNAND to EmuNAND1":"Из SysNAND в EmuNAND1",
+"SysNAND to EmuNAND1":"Из SysNAND в EmuNAND2",
+"EmuNAND to SysNAND":"Из EmuNAND в SysNAND",
+"EmuNAND to EmuNAND1":"Из EmuNAND в EmuNAND1",
+"EmuNAND to EmuNAND2":"Из EmuNAND в EmuNAND2",
+"EmuNAND1 to SysNAND":"Из EmuNAND1 в SysNAND",
+"EmuNAND1 to EmuNAND":"Из EmuNAND1 в EmuNAND",
+"EmuNAND1 to EmuNAND2":"Из EmuNAND1 в EmuNAND2",
+"EmuNAND2 to SysNAND":"Из EmuNAND2 в SysNAND",
+"EmuNAND2 to EmuNAND":"Из EmuNAND2 в EmuNAND",
+"EmuNAND2 to EmuNAND1":"Из EmuNAND2 в EmuNAND1",
+"Copy NAND image, separate partitions or files from SysNAND to first EmuNAND.":"Скопировать образ NAND, отдельные разделы или файлы из SysNAND в первый EmuNAND.",
+"Copy NAND image, separate partitions or files from SysNAND to second EmuNAND.":"Скопировать образ NAND, отдельные разделы или файлы из SysNAND в второй EmuNAND.",
+"Copy NAND image, separate partitions or files from SysNAND to third EmuNAND.":"Скопировать образ NAND, отдельные разделы или файлы из SysNAND в третий EmuNAND.",
+"Copy NAND image, separate partitions or files from first EmuNAND to SysNAND.":"Скопировать образ NAND, отдельные разделы или файлы из первого EmuNAND в SysNAND.",
+"Copy NAND image, separate partitions or files from first EmuNAND to second EmuNAND.":"Скопировать образ NAND, отдельные разделы или файлы из первого EmuNAND в второй EmuNAND.",
+"Copy NAND image, separate partitions or files from first EmuNAND to third EmuNAND.":"Скопировать образ NAND, отдельные разделы или файлы из первого EmuNAND в третий EmuNAND.",
+"Copy NAND image, separate partitions or files from second EmuNAND to SysNAND.":"Скопировать образ NAND, отдельные разделы или файлы из второго EmuNAND в SysNAND.",
+"Copy NAND image, separate partitions or files from second EmuNAND to first EmuNAND.":"Скопировать образ NAND, отдельные разделы или файлы из второго EmuNAND в первый EmuNAND.",
+"Copy NAND image, separate partitions or files from second EmuNAND to third EmuNAND.":"Скопировать образ NAND, отдельные разделы или файлы из второго EmuNAND в третий EmuNAND.",
+"Copy NAND image, separate partitions or files from third EmuNAND to SysNAND.":"Скопировать образ NAND, отдельные разделы или файлы из третьего EmuNAND в SysNAND.",
+"Copy NAND image, separate partitions or files from third EmuNAND to first EmuNAND.":"Скопировать образ NAND, отдельные разделы или файлы из третьего EmuNAND в первый EmuNAND.",
+"Copy NAND image, separate partitions or files from third EmuNAND to second EmuNAND.":"Скопировать образ NAND, отдельные разделы или файлы из третьего EmuNAND в второй EmuNAND.",
+"Copy full NAND image.":"Скопировать NAND целиком.",
+"Copy partitions.":"Скопировать разделы.",
+"Copy TWL (DSi) partition.":"Скопировать раздел TWL (DSi).",
+"Copy TWL (DSi) FAT16 partition (TWL logical partition 0).":"Скопировать раздел TWL (DSi) FAT16 (логический раздел TWL 0).",
+"Copy TWL (DSi) FAT12 photo partition (TWL logical partition 1).":"Скопировать раздел фото TWL (DSi) FAT12 (логический раздел TWL 1).",
+"Copy AGB (GBA) savegame partition.":"Скопировать раздел сохранений AGB (GBA).",
+"Copy first first firmware partition.":"Скопировать первый раздел firmware.",
+"Copy second second firmware partition.":"Скопировать второй раздел firmware.",
+"Copy CTR partition.":"Скопировать раздел CTR.",
+"Copy CTR (3DS) FAT 16 partition (CTR logical partition 0).":"раздел CTR (3DS) FAT 16 (логический раздел CTR 0).",
+"Copy files between CTRNAND FAT16 partitions.":"Скопировать файлы между разделами CTRNAND FAT16.",
 "Settings":"Настройки",
+"Change settings.":"Изменить настройки.",
+"Default boot":"Загружать по умолчанию",
+"Force rxTools UI":"Загрузить меню",
+"Force rxMode EmuNAND":"Загр. rxMode EmuNAND",
+"Force rxMode SysNAND":"Загр. rxMode SysNAND",
+"Force Pasta mode":"Загр. Pasta mode",
+"Theme":"Тема",
+"Show AGB_FIRM BIOS":"Показывать AGB_FIRM",
+"Language":"Язык",
+"SysNAND write protection":"Защита записи SysNAND",
 "Diagnostics":"Диагностика",
+"Check console setup.":"Проверить состояние консоли.",
+"Check rxTools build properties.":"Проверить параметры сборки rxTools.",
+"Build version":"Версия сборки",
+"Keys":"Ключи",
+"Check various key files presence validity.":"Проверить наличие и корректность файлов с ключами.",
+"Required for 6.x save game encryption on console firmware version below 7.0":"Требуется для шифрования сохрарений версии 6.x на консоли с версией firmware ниже 7.0",
+"Required for New 3DS firmware 9.5":"Требуется для New 3DS firmware 9.5",
+"Required for New 3DS firmware 9.6":"Требуется для New 3DS firmware 9.6",
+"Check SysNAND firmware and system titles versions.":"Проверить версии firmware и системных приложений SysNAND.",
+"Check first EmuNAND firmware and system titles versions.":"Проверить версии firmware и системных приложений первого EmuNAND.",
+"Check second EmuNAND firmware and system titles versions.":"Проверить версии firmware и системных приложений второго EmuNAND.",
+"Check third EmuNAND firmware and system titles versions.":"Проверить версии firmware и системных приложений третьего EmuNAND.",
+"Region":"Регион",
+"NATIVE_FIRM version":"Версия NATIVE_FIRM",
+"TWL_FIRM version":"Версия TWL_FIRM",
+"AGB_FIRM version":"Версия AGB_FIRM",
+"MSET version":"Версия MSET",
+"H&S version":"Версия H&S",
 
 "obsolete values below":"will be removed",
 "BACKING_UP":"Резервное копирование %ls...\n",
