--- a/lang/fr.json
+++ b/lang/fr.json
@@ -10,88 +10,38 @@
 "[LEFT]":"",
 "[UP]":"",
 "[DOWN]":"",
+"Enabled":" Activée",
+"Disabled":"Désactivée",
+"Japan":"Japon",
+"North America":"Amérique du Nord",
+"Europe":"Europe",
+"Australia":"Australie",
+"Europe/Australia":"Europe/Australie",
+"China":"Chine",
+"South Korea":"Corée du Sud",
+"Taiwan":"Taïwan",
+"Unknown":"Inconnue",
+"Failed to %ls %ls!":"Impossible de %ls %ls!",
+"mount":"monter",
+"load":"charger",
+"file system":"système de fichier",
+"Press %ls to %ls.":"Appuyez sur %ls pour %ls.",
+"any button":"n'importe qu'elle bouton",
+"continue":"continuer",
+"reboot":"redémarrer",
+"cancel":"annuler",
+"Completed!":"Complet!",
+"Canceled!":"Annuler!",
+"This file with a valid key must exist in the SD card root in order to boot rxMode on New 3DS.":"Ce fichier avec une clé valide doit se trouver dans la racine de la carte SD afin de démarrer rxMode sur New 3DS.",
+"This file with a valid key must exist in the SD card root in order to decrypt newer titles on firmware version below 7.0.0 and to use newer gamecard saves on firmware below 6.0.0.":"Ce fichier avec une clé valide doit se trouver dans la racine de la carte SD pour permettre le décryptage des derniers logiciels de la version 7.0.0 version et pour permettre d'utiliser les sauvegardes des cartouches sur les versions 6.0.0 et moins",
+"Generating %ls XORpad":"Génération du XORpad %ls",
+"Dumping %ls":"Sauvegarde de %ls",
+"Injecting %ls":"Injection de %ls",
+"Copying %ls to %ls":"Copie de %ls vers %ls",
+"Dumping %ls %ls partition":"Sauvegarde de la partition %ls %ls",
+"Injecting %ls %ls partition":"Injection de la partition %ls %ls",
+"Copying %ls partition from %ls to %ls":"Copie de la partition %ls de %ls vers %ls",
 
-"obsolete values below":"will be removed",
-"BACKING_UP":"Sauvegarde de %ls...\n",
-"DELETING":"Effacement de %ls...\n",
-"DOWNGRADE":"Downgrade %ls",
-"DOWNGRADING":"Downgrade de %ls...\n",
-"DOWNGRADING_NOT_NEEDED":"Downgrade de %ls non nécessaire.\n",
-"DUMP":"Extraction de %ls",
-"DUMPING":"Extraction de %ls\nvers %ls...\n",
-"INJECT":"Injection de %ls",
-"INJECTING":"Injection de\n%ls\nvers %ls...\n",
-"DECRYPT":"Décrypte %ls",
-"DECRYPTING":"Décryptage de %ls...\n",
-"DECRYPTED":"Décrypter %d %ls\n", 
-"GENERATE":"Génère %ls",
-"GENERATING":"Génération de %ls...\n",
-"PROCESSING":"Traitement de %ls...\n",
-"OPENING":"Ouverture %ls...\n",
-"RESTORE":"Restaurer %ls",
-"RESTORING":"Restauration de %ls...\n",
-"LOAD":"Charger %ls",
-"DIRECTORY":"Répertoires: %ls",
-"MISSING":"%ls manquant!\n",
-"ERROR_OPENING":"Erreur ouverture %ls!\n",
-"ERROR_CREATING":"Erreur création %ls!\n",
-"ERROR_READING":"Erreur lecture %ls!\n",
-"ERROR_WRITING":"Erreur écriture %ls!\n",
-"ERROR_COPYING":"Erreur copie %ls vers %ls!\n",
-"WRONG":"Mauvais %ls %ls!\n",
-"GOT":"obtenu %ls\n",
-"EXPECTED":"Attendu %ls\n",
-"VERSION":"version",
-"VERSION_OF":"Version du %ls: %u\n",
-"ENTRIES_COUNT":"entrées trouvées",
-"SIZE":"taille",
-"CONTENT":"contenu",
-"CRYPTO_TYPE":"Type de chiffrage: %ls\n",
-"CHOOSE":"Choisir %ls:\n",
-"NAND_PARTITIONS":"Partitions NAND",
-"TITLE_KEYS":"title keys",
-"TITLE_KEYS_FILE":"fichier title keys",
-"FILES":"fichiers",
-"PAD":"pad",
-"DOWNGRADE_PACK":"downgrade pack",
-"TMD_VERSION":"version du TMD",
-"TMD_SIZE":"taille du TMD ",
-"HASH":"hash",
-"FIRMWARE_FILE":"fichier firmware",
-"HEALTH_AND_SAFETY":"Info santé et la sécurité",
-"CHECK_TMD_ONLY":"vérifier le TMD uniquement",
-"INJECT_FBI":"injecter FBI",
-"SOURCE_ACTION":"action source",
-"SYSTEM_TITLES":"titres système",
-"SYSTEM_TITLES_WARNING":"Ceci peut prendre du temps,\ntoute la CTRNAND va être scannée.\nSoyez patient et attendez jusqu'à\nce que la recherche soit terminée.\n",
-"SYSTEM_TITLES_DECRYPT":"La CTRNAND a été entièrement\nscannée et %d titres CTR ont\nété extraits.\nVoulez-vous tous les\ndécrypter?\n",
-"KEYS_MISMATCH":"La taille de la clé binaire chiffrée ne correspond pas. Réessayer plus tard?\nclés trouvées: %04X\n longueur: E@%08X, A@%08X\n",
-"NO_EMUNAND":"Pas d'emuNAND installé!\n",
-"KEY7":"clé 7.x",
-"SECURE":"sécurisé",
-"NONE":"aucun",
-"PRESS_BUTTON_ACTION":"Presser %ls pour %ls",
-"HOLD_BUTTON_ACTION":"Maintenir le bouton %ls\npour %ls",
-"CANCEL":"annuler",
-"CONTINUE":"continuer",
-"KEEP":"garder",
-"DELETE":"effacer",
-"OPEN_MENU":"ouvrir menu",
-"FAILED":"Échec!\n",
-"COMPLETED":"Complété!\n",
-"SETTINGS":"Options",
-"FORCE_UI_BOOT":"Forcer démarrage UI    %ls",
-"SELECTED_THEME":"Thème choisi        <%3c  >",
-"SHOW_AGB":"Afficher le BIOS GBA   %ls",
-"ENABLE_3D_UI":"Activer UI 3D          %ls",
-"QUICK_BOOT":"Démarrage rapide       %ls",
-"ABSYSN":"Démarrer en sysNAND    %ls",
-"AUTOBOOT":"Démarrage automatique",
-"WARNING":"Attention",
-"REGION_":"Région: %ls\n",
-"REGION":"région",
-"YES":"Oui",
-"NO":"Non",
-"MENU_LANGUAGE":"Langue    %16ls",
-"RANDOM_THEME":"Thème aléatoire"
+"Boot":"Démarrage",
+"Boot options.":"Options de démarrage",
 }
