--- a/lang/fr.json
+++ b/lang/fr.json
@@ -10,7 +10,7 @@
 "[LEFT]":"",
 "[UP]":"",
 "[DOWN]":"",
-"Enabled":" Activée",
+"Enabled":"Activée",
 "Disabled":"Désactivée",
 "Japan":"Japon",
 "North America":"Amérique du Nord",
@@ -33,15 +33,222 @@
 "Completed!":"Complet!",
 "Canceled!":"Annuler!",
 "This file with a valid key must exist in the SD card root in order to boot rxMode on New 3DS.":"Ce fichier avec une clé valide doit se trouver dans la racine de la carte SD afin de démarrer rxMode sur New 3DS.",
-"This file with a valid key must exist in the SD card root in order to decrypt newer titles on firmware version below 7.0.0 and to use newer gamecard saves on firmware below 6.0.0.":"Ce fichier avec une clé valide doit se trouver dans la racine de la carte SD pour permettre le décryptage des derniers logiciels de la version 7.0.0 version et pour permettre d'utiliser les sauvegardes des cartouches sur les versions 6.0.0 et moins",
+"This file with a valid key must exist in the SD card root in order to decrypt newer titles on firmware version below 7.0.0 and to use newer gamecard saves on firmware below 6.0.0.":"Ce fichier avec une clé valide doit se trouver dans la racine de la carte SD pour permettre le décryptage des derniers titres de la version 7.0.0 et pour permettre d'utiliser les sauvegardes des cartouches sur les versions 6.0.0 et moins",
 "Generating %ls XORpad":"Génération du XORpad %ls",
-"Dumping %ls":"Sauvegarde de %ls",
+"Dumping %ls":"Extraction de %ls",
 "Injecting %ls":"Injection de %ls",
 "Copying %ls to %ls":"Copie de %ls vers %ls",
-"Dumping %ls %ls partition":"Sauvegarde de la partition %ls %ls",
+"Dumping %ls %ls partition":"Extraction de la partition %ls %ls",
 "Injecting %ls %ls partition":"Injection de la partition %ls %ls",
 "Copying %ls partition from %ls to %ls":"Copie de la partition %ls de %ls vers %ls",
 
 "Boot":"Démarrage",
 "Boot options.":"Options de démarrage",
+"Apply patches and reboot the console into rxMode on EmuNAND, if present.":"Appliquer les patchs et redémarré la console en rxMode sur EmuNAND, si elle est présente.",
+"Apply patches and reboot the console into rxMode on SysNAND.":"Appliquer les patchs et redémarré la console en rxMode sur SysNAND.",
+"Patches signature checks and load in SysNAND with GBA and DSi support.":"Patch la verfication des signatures et charge la SysNAND avec support des jeux GBA et DSi",
+"Reboot":"Redémarrage",
+"Reboot the console.":"Redémarrez la console.",
+"Turn off the console.":"Éteignez la console.",
+"Decrypt":"Décrypter",
+"Decryption options.":"Option de décryptage.",
+"Generate XORpads":"Générer les XORpads",
+"Generate XORpads for titles and NAND partitions.":"Générer les XORpads pour les titres et les partitions de la NAND",
+"Generate XORpads needed to decrypt and encrypt 3DS titles from SDinfo.bin.":"Générer les XORpads nécessaire pour le décryptage et le cryptage des titres 3DS à partir du fichier SDinfo.bin",
+"Generate XORpads needed to decrypt and encrypt 3DS titles from ncchinfo.bin.":"Générer les XORpads nécessaire au décryptage et à l'encryptage des titres 3DS à partir du fichier ncchinfo.bin.",
+"Generate XORpad of the TWL (DSi) partition.":"Générer les XORpads de la partition TWL (DSi)",
+"Generate XORpad of the TWL (DSi) FAT16 partition (TWL logical partition 0).":"Générer les XORpads de la partition FAT16 TWL (DSi) (partition TWL logique 0)",
+"Generate XORpad of the TWL (DSi) FAT12 photo partition (TWL logical partition 1).":"Générer les XORpads de la partition photo FAT12 TWL (DSi) (partition TWL logique 1)",
+"Generate XORpad of the AGB (GBA) savegame partition.":"Générer les XORpads de la partition dédié aux sauvegardes de jeux AGB (GBA).",
+"Generate XORpad of the first firmware partition.":"Générer les XORpads de la première partition dédié au firmware.",
+"Generate XORpad of the second firmware partition.":"Générer les XORpads de la seconde partition dédié au firmwares.",
+"Generate XORpad of the CTR partition.":"Générer les XORpads de la partition CTR.",
+"Generate XORpad of the CTR (3DS) FAT 16 partition (CTR logical partition 0).":"Générer les XORpads de la partition FAT 16 CTR (3DS) (partition CTR logique 0)",
+"Dump":"Extraction",
+"Dumping options.":"Options d'extraction.",
+"Dump NAND image, separate partitions or files from the SysNAND.":"Extraire l'image de la NAND, des partitions séparées ou des fichiers à partir de la SysNAND.",
+"Dump NAND image, separate partitions or files from the first EmuNAND.":"",
+"Dump NAND image, separate partitions or files from the second EmuNAND.":"",
+"Dump NAND image, separate partitions or files from the third EmuNAND.":"",
+"Image":"Образ",
+"Backup NAND raw image to file.":"",
+"Partitions":"",
+"Dump decrypted NAND partitions to file.":"",
+"Dump decrypted TWL (DSi) partition to file.":"",
+"Dump decrypted TWL (DSi) FAT16 partition (TWL logical partition 0) to file.":"",
+"Dump decrypted TWL (DSi) FAT12 photo partition (TWL logical partition 1) to file.":"",
+"Dump decrypted AGB (GBA) savegame partition to file.":"",
+"Dump decrypted first firmware partition to file.":"",
+"Dump decrypted second firmware partition to file.":"",
+"Dump decrypted CTR partition to file.":"",
+"Dump decrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) to file.":"",
+"Files":"",
+"Dump files from the CTRNAND FAT16 partition.":"",
+"Inject":"",
+"Injection options.":"",
+"Inject NAND image, separate partitions or files to the SysNAND.":"",
+"Inject NAND image, separate partitions or files to the first EmuNAND.":"",
+"Inject NAND image, separate partitions or files to the second EmuNAND.":"",
+"Inject NAND image, separate partitions or files to the third EmuNAND.":"",
+"Restore NAND from raw image file.":"",
+"Inject unencrypted NAND partitions from file.":"",
+"Inject unencrypted TWL (DSi) partition from file.":"",
+"Inject unencrypted TWL (DSi) FAT16 partition (TWL logical partition 0) from file.":"",
+"Inject unencrypted TWL (DSi) FAT12 photo partition (TWL logical partition 1) from file.":"",
+"Inject unencrypted AGB (GBA) savegame partition from file.":"",
+"Inject unencrypted first firmware partition from file.":"",
+"Inject unencrypted second firmware partition from file.":"",
+"Inject unencrypted CTR partition from file.":"",
+"Inject unencrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) from file.":"",
+"Inject files to the CTRNAND FAT16 partition.":"",
+"Copy":"",
+"Copy options.":"",
+"SysNAND to EmuNAND":"",
+"SysNAND to EmuNAND1":"",
+"SysNAND to EmuNAND1":"",
+"EmuNAND to SysNAND":"",
+"EmuNAND to EmuNAND1":"",
+"EmuNAND to EmuNAND2":"",
+"EmuNAND1 to SysNAND":"",
+"EmuNAND1 to EmuNAND":"",
+"EmuNAND1 to EmuNAND2":"",
+"EmuNAND2 to SysNAND":"",
+"EmuNAND2 to EmuNAND":"",
+"EmuNAND2 to EmuNAND1":"",
+"Copy NAND image, separate partitions or files from SysNAND to first EmuNAND.":"",
+"Copy NAND image, separate partitions or files from SysNAND to second EmuNAND.":"",
+"Copy NAND image, separate partitions or files from SysNAND to third EmuNAND.":"",
+"Copy NAND image, separate partitions or files from first EmuNAND to SysNAND.":"",
+"Copy NAND image, separate partitions or files from first EmuNAND to second EmuNAND.":"",
+"Copy NAND image, separate partitions or files from first EmuNAND to third EmuNAND.":"",
+"Copy NAND image, separate partitions or files from second EmuNAND to SysNAND.":"",
+"Copy NAND image, separate partitions or files from second EmuNAND to first EmuNAND.":"",
+"Copy NAND image, separate partitions or files from second EmuNAND to third EmuNAND.":"",
+"Copy NAND image, separate partitions or files from third EmuNAND to SysNAND.":"",
+"Copy NAND image, separate partitions or files from third EmuNAND to first EmuNAND.":"",
+"Copy NAND image, separate partitions or files from third EmuNAND to second EmuNAND.":"",
+"Copy full NAND image.":"Copier totalement l'image de la NAND",
+"Copy partitions.":"Copier les partitions",
+"Copy TWL (DSi) partition.":"Copier la partition TWL (DSi)",
+"Copy TWL (DSi) FAT16 partition (TWL logical partition 0).":"",
+"Copy TWL (DSi) FAT12 photo partition (TWL logical partition 1).":"",
+"Copy AGB (GBA) savegame partition.":"",
+"Copy first first firmware partition.":"",
+"Copy second second firmware partition.":"",
+"Copy CTR (3DS) FAT 16 partition (CTR logical partition 0).":"",
+"Copy files between CTRNAND FAT16 partitions.":"",
+"Settings":"Paramètres",
+"Change settings.":"Modifier les paramètres",
+"Default boot":"Démarrage par défaut",
+"Force rxTools UI":"Forcer le démarrage de l'interphace graphique (GUI)",
+"Force rxMode EmuNAND":"Forcer le démarrage d'rxMode en EmuNAND",
+"Force rxMode SysNAND":"Forcer le démarrage d'rxMode en SysNAND",
+"Force Pasta mode":"Forcer le mode Pasta",
+"Theme":"Thème",
+"Show AGB_FIRM BIOS":"Afficher le BIOS de l'AGB_FIRM",
+"Language":"Langue",
+"SysNAND write protection":"Protection de la SysNAND en écriture",
+"Diagnostics":"Diagnostique",
+"Check console setup.":"Vérifier la configuration de la console",
+"Check rxTools build properties.":"Vérifier les propriétées de ce build d'rxTools.",
+"Build version":"Version du build",
+"Keys":"Clé",
+"Check various key files presence validity.":"Vérifier la présence des fichiers contenant les clés binaires.",
+"Required for 6.x save game encryption on console firmware version below 7.0":"",
+"Required for New 3DS firmware 9.5":"Requis pour le firmware 9.5 sur New 3DS",
+"Required for New 3DS firmware 9.6":"Requis pour le firmware 9.6 sur New 3DS",
+"Check SysNAND firmware and system titles versions.":"Vérifier le firmware de la SysNAND et la version de ces titres systèmes.",
+"Check first EmuNAND firmware and system titles versions.":"Vérifier le firmware de la première EmuNAND et la version de ces titres systèmes.",
+"Check second EmuNAND firmware and system titles versions.":"Vérifier le firmware de la deuxième EmuNAND et la version de ces titres systèmes.",
+"Check third EmuNAND firmware and system titles versions.":"Vérifier le firmware de la troisième EmuNAND et la version de ces titres systèmes.",
+"Region":"Région",
+"NATIVE_FIRM version":"Version du NATIVE_FIRM",
+"TWL_FIRM version":"Version du TWL_FIRM",
+"AGB_FIRM version":"Version de l'AGB_FIRM",
+"MSET version":"Version du MSET",
+"H&S version":"Version de l'H&S",
+
+"obsolete values below":"will be removed",
+"BACKING_UP": "Sauvegarde de %ls...\n",
+"DELETING": "Effacement de %ls...\n",
+"DOWNGRADE": "Downgrade %ls",
+"DOWNGRADING": "Downgrade de %ls...\n",
+"DOWNGRADING_NOT_NEEDED": "Le downgrade de %ls n'est pas nécessaire.\n",
+"DUMP": "Extraction de %ls",
+"DUMPING": "Extraction de %ls\nvers %ls...\n",
+"INJECT": "Injection de %ls",
+"INJECTING": "Injection de\n%ls\nvers %ls...\n",
+"DECRYPT": "Décrypte %ls",
+"DECRYPTING": "Décryptage de %ls...\n",
+"DECRYPTED": "Décrypter %d %ls\n", 
+"GENERATE": "Génère %ls",
+"GENERATING": "Génération de %ls...\n",
+"PROCESSING": "Traitement de %ls...\n",
+"OPENING": "Ouverture %ls...\n",
+"RESTORE": "Restaurer %ls",
+"RESTORING": "Restauration de %ls...\n",
+"LOAD": "Charger %ls",
+"DIRECTORY": "Répertoires: %ls",
+"MISSING": "%ls manquant!\n",
+"ERROR_OPENING": "Erreur ouverture %ls!\n",
+"ERROR_CREATING": "Erreur lors de la création de %ls!\n",
+"ERROR_READING": "Erreur lors de la lecture de %ls!\n",
+"ERROR_WRITING": "Erreur lors de l'écriture de %ls!\n",
+"ERROR_COPYING": "Erreur lors de la copie de %ls vers %ls!\n",
+"WRONG": "Mauvais %ls %ls!\n",
+"GOT": "obtenu %ls\n",
+"EXPECTED": "Attendu %ls\n",
+"VERSION": "version",
+"VERSION_OF": "Version du %ls: %u\n",
+"ENTRIES_COUNT": "entrées trouvées",
+"SIZE": "taille",
+"CONTENT": "contenu",
+"CRYPTO_TYPE": "Type de chiffrage: %ls\n",
+"CHOOSE": "Choisir %ls:\n",
+"NAND_PARTITIONS": "Partitions NAND",
+"TITLE_KEYS": "title keys",
+"TITLE_KEYS_FILE": "fichier title keys",
+"FILES": "fichiers",
+"PAD": "pad",
+"DOWNGRADE_PACK": "downgrade pack",
+"TMD_VERSION": "version du TMD",
+"TMD_SIZE": "taille du TMD ",
+"HASH": "hash",
+"FIRMWARE_FILE": "fichier firmware",
+"HEALTH_AND_SAFETY": "Info santé et la sécurité",
+"CHECK_TMD_ONLY": "vérifier le TMD uniquement",
+"INJECT_FBI": "injecter FBI",
+"SOURCE_ACTION": "action source",
+"SYSTEM_TITLES": "titres système",
+"SYSTEM_TITLES_WARNING": "Ceci peut prendre du temps,\ntoute la CTRNAND va être scannée.\nSoyez patient et attendez jusqu'à\nce que la recherche soit terminée.\n",
+"SYSTEM_TITLES_DECRYPT": "La CTRNAND a été entièrement\nscannée et %d titres CTR ont\nété extraits.\nVoulez-vous tous les\ndécrypter?\n",
+"KEYS_MISMATCH": "La taille de la clé binaire chiffrée ne correspond pas. Réessayer plus tard?\nclés trouvées: %04X\n longueur: E@%08X, A@%08X\n",
+"NO_EMUNAND": "Pas d'emuNAND installé!\n",
+"KEY7": "clé 7.x",
+"SECURE": "sécurisé",
+"NONE": "aucun",
+"PRESS_BUTTON_ACTION": "Appuyer sur %ls pour %ls",
+"HOLD_BUTTON_ACTION": "Maintenir le bouton %ls\npour %ls",
+"CANCEL": "annuler",
+"CONTINUE": "continuer",
+"KEEP": "garder",
+"DELETE": "effacer",
+"OPEN_MENU": "Ouvrir le menu",
+"FAILED": "Échec!\n",
+"COMPLETED": "Complété!\n",
+"SETTINGS": "Options",
+"FORCE_UI_BOOT": "Forcer le démarrage de l'interphace graphique (GUI)    %ls",
+"SELECTED_THEME": "Thème choisi        <%3c  >",
+"SHOW_AGB": "Afficher le BIOS GBA   %ls",
+"ENABLE_3D_UI": "Activer l'interphace graphique (GUI) 3D          %ls",
+"QUICK_BOOT": "Démarrage rapide       %ls",
+"ABSYSN": "Démarrer en SysNAND    %ls",
+"AUTOBOOT": "Démarrage automatique",
+"WARNING": "Attention",
+"REGION_": "Région: %ls\n",
+"REGION": "région",
+"YES": "Oui",
+"NO": "Non",
+"MENU_LANGUAGE": "Langue    %16ls",
+"RANDOM_THEME": "Thème aléatoire"
 }
