--- a/lang/fr.json
+++ b/lang/fr.json
@@ -67,25 +67,25 @@
 "Dump":"Extraction",
 "Dumping options.":"Options d'extraction.",
 "Dump NAND image, separate partitions or files from the SysNAND.":"Extraire l'image de la NAND, des partitions séparées ou des fichiers à partir de la SysNAND.",
-"Dump NAND image, separate partitions or files from the first EmuNAND.":"",
-"Dump NAND image, separate partitions or files from the second EmuNAND.":"",
-"Dump NAND image, separate partitions or files from the third EmuNAND.":"",
-"Image":"Образ",
+"Dump NAND image, separate partitions or files from the first EmuNAND.":"Extraire l'image de la NAND, des partitions séparées ou des fichiers à partir de la première EmuNAND.",
+"Dump NAND image, separate partitions or files from the second EmuNAND.":"Extraire l'image de la NAND, des partitions séparées ou des fichiers à partir de la seconde EmuNAND.",
+"Dump NAND image, separate partitions or files from the third EmuNAND.":"Extraire l'image de la NAND, des partitions séparées ou des fichiers à partir de la troisième EmuNAND.",
+"Image":"Image",
 "Backup NAND raw image to file.":"",
-"Partitions":"",
-"Dump decrypted NAND partitions to file.":"",
-"Dump decrypted TWL (DSi) partition to file.":"",
-"Dump decrypted TWL (DSi) FAT16 partition (TWL logical partition 0) to file.":"",
-"Dump decrypted TWL (DSi) FAT12 photo partition (TWL logical partition 1) to file.":"",
-"Dump decrypted AGB (GBA) savegame partition to file.":"",
+"Partitions":"Partitions",
+"Dump decrypted NAND partitions to file.":"Extraire une partition décryptée de la NAND vers un fichier.",
+"Dump decrypted TWL (DSi) partition to file.":"Extraire une partition TWL (DSi) décryptée vers un fichier.",
+"Dump decrypted TWL (DSi) FAT16 partition (TWL logical partition 0) to file.":"Extraire une partition FAT 16 TWL (DSi) décryptée vers un fichier.",
+"Dump decrypted TWL (DSi) FAT12 photo partition (TWL logical partition 1) to file.":"Extraire une partition photo FAT 12 TWL (DSi) décryptée vers un fichier.",
+"Dump decrypted AGB (GBA) savegame partition to file.":"Extraire une partition de sauvegarde dédié aux jeux AGB (GBA) décryptée vers un fichier.",
 "Dump decrypted first firmware partition to file.":"",
 "Dump decrypted second firmware partition to file.":"",
 "Dump decrypted CTR partition to file.":"",
 "Dump decrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) to file.":"",
-"Files":"",
+"Files":"Fichiers",
 "Dump files from the CTRNAND FAT16 partition.":"",
-"Inject":"",
-"Injection options.":"",
+"Inject":"Injection",
+"Injection options.":"Options d'injection.",
 "Inject NAND image, separate partitions or files to the SysNAND.":"",
 "Inject NAND image, separate partitions or files to the first EmuNAND.":"",
 "Inject NAND image, separate partitions or files to the second EmuNAND.":"",
@@ -101,20 +101,20 @@
 "Inject unencrypted CTR partition from file.":"",
 "Inject unencrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) from file.":"",
 "Inject files to the CTRNAND FAT16 partition.":"",
-"Copy":"",
-"Copy options.":"",
-"SysNAND to EmuNAND":"",
-"SysNAND to EmuNAND1":"",
-"SysNAND to EmuNAND1":"",
-"EmuNAND to SysNAND":"",
-"EmuNAND to EmuNAND1":"",
-"EmuNAND to EmuNAND2":"",
-"EmuNAND1 to SysNAND":"",
-"EmuNAND1 to EmuNAND":"",
-"EmuNAND1 to EmuNAND2":"",
-"EmuNAND2 to SysNAND":"",
-"EmuNAND2 to EmuNAND":"",
-"EmuNAND2 to EmuNAND1":"",
+"Copy":"Copie",
+"Copy options.":"Options de copie",
+"SysNAND to EmuNAND":"De la SysNAND vers l'EmuNAND",
+"SysNAND to EmuNAND1":"De la SysNAND vers l'EmuNAND1",
+"SysNAND to EmuNAND2":"De la SysNAND vers l'EmuNAND2",
+"EmuNAND to SysNAND":"De l'EmuNAND vers SysNAND",
+"EmuNAND to EmuNAND1":"De l'EmuNAND vers l'EmuNAND1",
+"EmuNAND to EmuNAND2":"De l'EmuNAND vers l'EmuNAND2",
+"EmuNAND1 to SysNAND":"De l'EmuNAND1 vers SysNAND",
+"EmuNAND1 to EmuNAND":"De l'EmuNAND1 vers l'EmuNAND",
+"EmuNAND1 to EmuNAND2":"De l'EmuNAND1 vers l'EmuNAND2",
+"EmuNAND2 to SysNAND":"De l'EmuNAND2 vers SysNAND",
+"EmuNAND2 to EmuNAND":"De l'EmuNAND2 vers l'EmuNAND",
+"EmuNAND2 to EmuNAND1":"De l'EmuNAND2 vers l'EmuNAND1",
 "Copy NAND image, separate partitions or files from SysNAND to first EmuNAND.":"",
 "Copy NAND image, separate partitions or files from SysNAND to second EmuNAND.":"",
 "Copy NAND image, separate partitions or files from SysNAND to third EmuNAND.":"",
@@ -127,18 +127,18 @@
 "Copy NAND image, separate partitions or files from third EmuNAND to SysNAND.":"",
 "Copy NAND image, separate partitions or files from third EmuNAND to first EmuNAND.":"",
 "Copy NAND image, separate partitions or files from third EmuNAND to second EmuNAND.":"",
-"Copy full NAND image.":"Copier totalement l'image de la NAND",
-"Copy partitions.":"Copier les partitions",
-"Copy TWL (DSi) partition.":"Copier la partition TWL (DSi)",
-"Copy TWL (DSi) FAT16 partition (TWL logical partition 0).":"",
-"Copy TWL (DSi) FAT12 photo partition (TWL logical partition 1).":"",
-"Copy AGB (GBA) savegame partition.":"",
-"Copy first first firmware partition.":"",
-"Copy second second firmware partition.":"",
-"Copy CTR (3DS) FAT 16 partition (CTR logical partition 0).":"",
-"Copy files between CTRNAND FAT16 partitions.":"",
+"Copy full NAND image.":"Copier totalement l'image de la NAND.",
+"Copy partitions.":"Copier les partitions.",
+"Copy TWL (DSi) partition.":"Copier la partition TWL (DSi).",
+"Copy TWL (DSi) FAT16 partition (TWL logical partition 0).":"Copier la partition FAT16 TWL (DSi).",
+"Copy TWL (DSi) FAT12 photo partition (TWL logical partition 1).":"Copier la partition photo FAT12 TWL (DSi).",
+"Copy AGB (GBA) savegame partition.":"Copie de la partition dédié aux sauvegardes de jeux AGB (GBA).",
+"Copy first firmware partition.":"Copier la première partition dédié au firmware.",
+"Copy second firmware partition.":"Copier la seconde partition dédié au firmware.",
+"Copy CTR (3DS) FAT 16 partition (CTR logical partition 0).":"Copier les partitions FAT 16 CTR (3DS).",
+"Copy files between CTRNAND FAT16 partitions.":"Copier des fichiers entre les partitions FAT 16 CTRNAND.",
 "Settings":"Paramètres",
-"Change settings.":"Modifier les paramètres",
+"Change settings.":"Modifier les paramètres.",
 "Default boot":"Démarrage par défaut",
 "Force rxTools UI":"Forcer le démarrage de l'interphace graphique (GUI)",
 "Force rxMode EmuNAND":"Forcer le démarrage d'rxMode en EmuNAND",
@@ -159,7 +159,7 @@
 "Required for New 3DS firmware 9.6":"Requis pour le firmware 9.6 sur New 3DS",
 "Check SysNAND firmware and system titles versions.":"Vérifier le firmware de la SysNAND et la version de ces titres systèmes.",
 "Check first EmuNAND firmware and system titles versions.":"Vérifier le firmware de la première EmuNAND et la version de ces titres systèmes.",
-"Check second EmuNAND firmware and system titles versions.":"Vérifier le firmware de la deuxième EmuNAND et la version de ces titres systèmes.",
+"Check second EmuNAND firmware and system titles versions.":"Vérifier le firmware de la seconde EmuNAND et la version de ces titres systèmes.",
 "Check third EmuNAND firmware and system titles versions.":"Vérifier le firmware de la troisième EmuNAND et la version de ces titres systèmes.",
 "Region":"Région",
 "NATIVE_FIRM version":"Version du NATIVE_FIRM",
