--- a/lang/ru.json
+++ b/lang/ru.json
@@ -106,7 +106,7 @@
 "Copy options.":"Утилиты для копирования.",
 "SysNAND to EmuNAND":"Из SysNAND в EmuNAND",
 "SysNAND to EmuNAND1":"Из SysNAND в EmuNAND1",
-"SysNAND to EmuNAND1":"Из SysNAND в EmuNAND2",
+"SysNAND to EmuNAND2":"Из SysNAND в EmuNAND2",
 "EmuNAND to SysNAND":"Из EmuNAND в SysNAND",
 "EmuNAND to EmuNAND1":"Из EmuNAND в EmuNAND1",
 "EmuNAND to EmuNAND2":"Из EmuNAND в EmuNAND2",
@@ -134,8 +134,8 @@
 "Copy TWL (DSi) FAT16 partition (TWL logical partition 0).":"Скопировать раздел TWL (DSi) FAT16 (логический раздел TWL 0).",
 "Copy TWL (DSi) FAT12 photo partition (TWL logical partition 1).":"Скопировать раздел фото TWL (DSi) FAT12 (логический раздел TWL 1).",
 "Copy AGB (GBA) savegame partition.":"Скопировать раздел сохранений AGB (GBA).",
-"Copy first first firmware partition.":"Скопировать первый раздел firmware.",
-"Copy second second firmware partition.":"Скопировать второй раздел firmware.",
+"Copy first firmware partition.":"Скопировать первый раздел firmware.",
+"Copy second firmware partition.":"Скопировать второй раздел firmware.",
 "Copy CTR partition.":"Скопировать раздел CTR.",
 "Copy CTR (3DS) FAT 16 partition (CTR logical partition 0).":"раздел CTR (3DS) FAT 16 (логический раздел CTR 0).",
 "Copy files between CTRNAND FAT16 partitions.":"Скопировать файлы между разделами CTRNAND FAT16.",
