--- a/lang/fr.json
+++ b/lang/fr.json
@@ -14,7 +14,7 @@
 "Disabled":"Désactivée",
 "Japan":"Japon",
 "North America":"Amérique du Nord",
-"Europe":"Europe",
+"Europe":"",
 "Australia":"Australie",
 "Europe/Australia":"Europe/Australie",
 "China":"Chine",
@@ -72,7 +72,7 @@
 "Dump NAND image, separate partitions or files from the third EmuNAND.":"Extraire l'image de la NAND, des partitions séparées ou des fichiers à partir de la troisième EmuNAND.",
 "Image":"Image",
 "Backup NAND raw image to file.":"",
-"Partitions":"Partitions",
+"Partitions":"",
 "Dump decrypted NAND partitions to file.":"Extraire une partition décryptée de la NAND vers un fichier.",
 "Dump decrypted TWL (DSi) partition to file.":"Extraire une partition TWL (DSi) décryptée vers un fichier.",
 "Dump decrypted TWL (DSi) FAT16 partition (TWL logical partition 0) to file.":"Extraire une partition FAT 16 TWL (DSi) décryptée vers un fichier.",
